--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           }
